:lipstick: update: remove z-index on why list component to ensure navbar is above other page content

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -253,7 +253,6 @@
     flex-direction: column;
     gap: 25px;
     position: relative;
-    z-index: 1;
     padding: 0 25px;
 }
 
